--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <title>axxsh | Hello World!</title>
 <meta name="title" content="axxsh | Hello World!" />
-<meta name="description" content="Blogs,ideas and some fun."> 
+<meta name="description" content="Website under construction."> 
 
 
 <link rel="canonical" href="https://axxsh.github.io/" />
