--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <header>
-    <h1>Hello, world</h1>
-    <p>This is a test.</p>
+    <h1>Hi, I am Akshay</h1>
+    <p>Contact me.</p>
   </header>
 
   <main>
-    <p>This is my new website and it's using Simple.css. It's really cool. If you want to use it too, you can <a href="https://simplecss.org">visit their site</a>.</p>
+    <p><a href="https://t.me/axxshx">[Telegram]</a>.</p>
   </main>
 
   <footer>
-    <p>github/axxsh</p>
+    <p>axxsh</p>
   </footer>
 </body>
 </html>
