--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   </header>
 
   <main>
-    <p><a href="https://t.me/axxshx">[Telegram]</a>.</p>
+    <p><a href="https://t.me/axxshx">[Telegram]</a>
+ 
+<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a></p>
   </main>
 
   <footer>
