--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="styles.css">
     <title>axxsh</title>
 </head>
 <body>
   <header>
     <h3>Hi, I am Akshay</h3>
+<p>
+<a href="https://t.me/axxshx">[Telegram]</a>
+<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
+</p>
   </header>
 
   <main>
-    <p><a href="https://t.me/axxshx">[Telegram]</a>
- 
-<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a></p>
+    <div class="tenor-gif-embed" data-postid="16931717" data-share-method="host" data-aspect-ratio="1.36752" data-width="100%">
+<a href="https://tenor.com/view/anime-haikyuu-loading-gif-16931717">Anime Haikyuu GIF</a>from <a href="https://tenor.com/search/anime-gifs">Anime GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </main>
 
   <footer>
