--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
     <title>axxsh</title>
 </head>
 <body>
   <header>
-    <h3>Hi, I am Akshay</h3>
+    <h1>Hi, I am Akshay</h1>
 <p>
 <a href="https://t.me/axxshx">[Telegram]</a>
 <a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
@@ -17,8 +19,7 @@
   </header>
 
   <main>
-    <div class="tenor-gif-embed" data-postid="16931717" data-share-method="host" data-aspect-ratio="1.36752" data-width="100%">
-<a href="https://tenor.com/view/anime-haikyuu-loading-gif-16931717">Anime Haikyuu GIF</a>from <a href="https://tenor.com/search/anime-gifs">Anime GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+   <div class="tenor-gif-embed" data-postid="21765189" data-share-method="host" data-aspect-ratio="1.77778" data-width="20%"><a href="https://tenor.com/view/typing-linux-computer-defectiverat-newgrounds-gif-21765189">Typing Linux GIF</a>from <a href="https://tenor.com/search/typing-gifs">Typing GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </main>
 
   <footer>
