--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>
 <a href="https://t.me/axxshx">[Telegram]</a>
 <a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
+<a href="https://github.com/axxsh">[Github]</a>
 </p>
   </header>
 
