--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-   <div class="tenor-gif-embed" data-postid="21765189" data-share-method="host" data-aspect-ratio="1.77778" data-width="20%"><a href="https://tenor.com/view/typing-linux-computer-defectiverat-newgrounds-gif-21765189">Typing Linux GIF</a>from <a href="https://tenor.com/search/typing-gifs">Typing GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+   <div class="tenor-gif-embed" data-postid="21765189" data-share-method="host" data-aspect-ratio="1.77778" data-width="250px"><a href="https://tenor.com/view/typing-linux-computer-defectiverat-newgrounds-gif-21765189">Typing Linux GIF</a>from <a href="https://tenor.com/search/typing-gifs">Typing GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   </main>
 
   <footer>
