--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    <title>axxsh</title>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/styles.css">
+<title>axxsh</title>
 </head>
 <body>
-  <header>
-    <h1>Hi, I am Akshay</h1>
-<p>
+<header>
+<h1>Hi, I am Akshay</h1>
+<p class="links">
 <a href="https://t.me/axxshx">[Telegram]</a>
-<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
+<a href="/cdn-cgi/l/email-protection#680910101b00460318280f05090104460b0705">[Send Email]</a>
 <a href="https://github.com/axxsh">[Github]</a>
 </p>
-  </header>
-
-  <main>
-   <div class="tenor-gif-embed" data-postid="21765189" data-share-method="host" data-aspect-ratio="1.77778" data-width="250px"><a href="https://tenor.com/view/typing-linux-computer-defectiverat-newgrounds-gif-21765189">Typing Linux GIF</a>from <a href="https://tenor.com/search/typing-gifs">Typing GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-  </main>
-
-  <footer>
-    <p>axxsh</p>
-  </footer>
+</header>
+<main>
+<p></p>
+</main>
+<footer>
+<p class="bottom">axxsh</p>
+</footer>
 </body>
 </html>
