--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <title>axxsh</title>
 </head>
 <body>
+<div class"center">
 <header>
 <h1>Hi, I am Akshay</h1>
 <p class="links">
@@ -24,5 +25,6 @@
 <footer>
 <p class="bottom">axxsh</p>
 </footer>
+</div>
 </body>
 </html>
