--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Hi, I am Akshay</h1>
 <p class="links">
 <a href="https://t.me/axxshx">[Telegram]</a>
-<a href="/cdn-cgi/l/email-protection#680910101b00460318280f05090104460b0705">[Send Email]</a>
+<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
 <a href="https://github.com/axxsh">[Github]</a>
 </p>
 </header>
