--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ Odio id eum et. Voluptatibus sit asperiores omnis quibusdam et similique commodi
 
 <footer>
 <p>____</p>
+<div class"gnulinux">
+<a href="https://t.me/GnuLinuxIndia">
+<img src="/images/gnulinuxindia.png" alt="gnulinuxindia">
+</a>
+</div>
 <p class="bottom">Akshay K P <a href="https://akshaykp.xyz">[axxsh]</a> | Made using <a href="https://www.getzola.org/">Zola</a></p>
 </footer>
 
