--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <p class="links">
 <a href="/">[Home]</a>
 <a href="https://t.me/axxshx">[Telegram]</a>
-<a href="mailto:axxsh.kp@gmail.com">[Send Email]</a>
 <a href="https://github.com/axxsh">[Github]</a>
 <a href="/blog/">[Blog]</a>
 </p>
@@ -32,19 +31,21 @@
     <div class="container">
       
 <div class="main">
-<p>Hi,I am Akshay.This is my personal website.</p>
-<p>
+<h4>Hi, I am Akshay.</h4>
 
-Occaecati laboriosam error fuga temporibus. Ut quaerat qui illo rerum quae unde. Quas voluptas quam debitis non. Expedita maiores et voluptatem repudiandae minima. Corrupti qui quibusdam sunt quas dolorem voluptas.
-</p><p>
-Autem tempore aut corporis doloremque perspiciatis. Natus dolorem eligendi ex. Molestiae praesentium ratione minus dignissimos. Itaque perferendis reiciendis praesentium libero sit. Voluptates nihil voluptate sed in ab ea in. Fugit earum quas vel eum rerum.
-</p><p>
-Praesentium assumenda laborum ab. Itaque similique quia dolorem molestiae quam dolorum. Vel dolorum facere qui aspernatur consequuntur velit est hic. Ea laboriosam est dolores ea architecto soluta quis. Voluptate vitae aut sit earum in eaque.
-</p><p>
-Fugit exercitationem sunt aut corporis praesentium aperiam. Dolorem ipsam et temporibus non cum inventore. Doloremque est porro consectetur reprehenderit.
-</p><p>
-Odio id eum et. Voluptatibus sit asperiores omnis quibusdam et similique commodi numquam. Qui tenetur enim earum odio. Dolore perspiciatis ullam ad. Est magni rerum voluptates delectus modi corporis.
-</p>
+<p>Welcome to my website. I am 24 of year old guy from Kannur,Kerala. I love to make,break,fix and learn new things.I am highly interested in linux, websites and many other related stuff. Here I am planning to post some interesting and helpful things I go through my daily life.</p>
+<p>If you ask me why a website. Because it's cool and hell lot of fun and what else do you want?</p>
+<p>I will be posting some photos i took in the past and some other stuff.</>
+<h3>Contact</h3>
+<ul>
+	<li>[Email] : axxsh.kp@gmail.com</li>
+	<li><a href="https://t.me/axxshx">[Telegram]</a></li>
+	<li><a href="https://github.com/axxsh">[Github]</a>
+</ul>
+<h3>Other</h3>
+<ul>
+	<li><a href="/blog">[Blog]</a></li>
+</ul>
 </div>
 
     </div>
