--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 </h1>
 <p class="links">
 <a href="/">[Home]</a>
-<a href="https://t.me/axxshx">[Telegram]</a>
 <a href="https://github.com/axxsh">[Github]</a>
 <a href="/blog/">[Blog]</a>
+<a href="/gallery.html">[Photos]</a>
 </p>
 <p>____</p>
 </header>
 
 <body>
+
   <section class="section">
     <div class="container">
       
@@ -35,7 +36,6 @@
 
 <p>Welcome to my website. I am 24 of year old guy from Kannur,Kerala. I love to make,break,fix and learn new things.I am highly interested in linux, websites and many other related stuff. Here I am planning to post some interesting and helpful things I go through my daily life.</p>
 <p>If you ask me why a website. Because it's cool and hell lot of fun and what else do you want?</p>
-<p>I will be posting some photos i took in the past and some other stuff.</>
 <h3>Contact</h3>
 <ul>
 	<li>[Email] : axxsh.kp@gmail.com</li>
@@ -45,11 +45,14 @@
 <h3>Other</h3>
 <ul>
 	<li><a href="/blog">[Blog]</a></li>
+	<li><a href="/gallery.html">[Photos]</a></li>
 </ul>
 </div>
 
     </div>
   </section>
+
+</body>
 
 <footer>
 <p>____</p>
@@ -60,7 +63,5 @@
 </div>
 <p class="bottom">Akshay K P <a href="https://akshaykp.xyz">[axxsh]</a> | Made using <a href="https://www.getzola.org/">Zola</a></p>
 </footer>
-
-</body>
 
 </html>
