--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 <h4>Hi, I am Akshay.</h4>
 
 <p>Welcome to my website. I am 24 of year old guy from Kannur,Kerala. I love to make,break,fix and learn new things.I am highly interested in linux, websites and many other related stuff. Here I am planning to post some interesting and helpful things I go through my daily life.</p>
-<p>If you ask me why a website. Because it's cool and hell lot of fun and what else do you want?</p>
 <h3>Contact</h3>
 <ul>
-	<li>[Email] : axxsh.kp@gmail.com</li>
-	<li><a href="https://t.me/axxshx">[Telegram]</a></li>
+	<li><a href="mailto:axxsh.kp@gmail.com">[Email] : axxsh.kp@gmail.com</a></li>
+	<li><a href="https://matrix.to/#/@axxsh:matrix.org">[Matrix] : @axxsh:matrix.org</a></li>
 	<li><a href="https://github.com/axxsh">[Github]</a>
 </ul>
 <h3>Other</h3>
