--- a/404.html
+++ b/404.html
@@ -14,7 +14,9 @@
 <div class="404">
 <header>
 <h1 class="title">
+<div class="center">
 <span class="gradient">404 Not Found.</span>
+</div>
 </h1>
 <p class="links">
 <a href="/">[Home]</a>
