--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ul>
 	<li><a href="mailto:axxsh.kp@gmail.com">[Email] : axxsh.kp@gmail.com</a></li>
 	<li><a href="https://matrix.to/#/@axxsh:matrix.org">[Matrix] : @axxsh:matrix.org</a></li>
-	<li><a href="https://github.com/axxsh">[Github]</a>
+	<li><a href="https://github.com/axxsh">[Github] : github.com/axxsh</a>
 </ul>
 <h3>Other</h3>
 <ul>
@@ -56,9 +56,7 @@
 <footer>
 <p>____</p>
 <div class"gnulinux">
-<a href="https://t.me/GnuLinuxIndia">
 <img src="/images/gnulinuxindia.png" alt="gnulinuxindia">
-</a>
 </div>
 <p class="bottom">Akshay K P <a href="https://akshaykp.xyz">[axxsh]</a> | Made using <a href="https://www.getzola.org/">Zola</a></p>
 </footer>
