--- a/index.html
+++ b/index.html
@@ -8,22 +8,20 @@
   <meta name="description" content="Akshay's Personal Website">
   <meta name="author" content="axxsh">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Noto+Sans+Tifinagh:wght@400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
 <header>
-<h1 class="title">
-<span class="gradient">axxsh</span>
-</h1>
+<h1 class="title">akshaykp.xyz</h1>
 <p class="links">
-<a href="/">[Home]</a>
-<a href="https://github.com/axxsh">[Github]</a>
-<a href="/blog/">[Blog]</a>
-<a href="/gallery.html">[Photos]</a>
+<a href="/">Home</a>
+<a href="/blog/">Blog</a>
+<a href="https://github.com/axxsh">Github</a>
 </p>
-<p>____</p>
+<hr>
 </header>
 
 <body>
@@ -32,20 +30,21 @@
     <div class="container">
       
 <div class="main">
-<h4>Hi, I am Akshay.</h4>
+	<h3><span class="accent">$ </span>whoami</h3>
+		<p>hi,<br>i am <span class="name">akshay.</span><br>just a random person on the internet.</p>
+	<h3><span class="accent">$ </span>interests</h3>
+		<p>having fun with linux & websites.<br>
+		learning and testing things i find on the internet.<br>
+		listens to eminem.<br>
+		sci-fi movies with great stories.<br>
+		new to anime.</p>
+	<h3><span class="accent">$ </span>contact</h3>
+		<a href="mailto:axxsh.kp@gmail.com" class="contact">mail : axxsh.kp@gmail.com</a><br>
+		<a href="https://matrix.to/#/@axxsh:matrix.org" class="contact">matrix : @axxsh:matrix.org</a>
+	<h3><span class="accent">$ </span>note</h3>
+		<p>some links might not be working.<br>
+		[i am always changing the code.]</p>
 
-<p>Welcome to my website. I am 24 of year old guy from Kannur,Kerala. I love to make,break,fix and learn new things.I am highly interested in linux, websites and many other related stuff. Here I am planning to post some interesting and helpful things I go through my daily life.</p>
-<h3>Contact</h3>
-<ul>
-	<li><a href="mailto:axxsh.kp@gmail.com">[Email] : axxsh.kp@gmail.com</a></li>
-	<li><a href="https://matrix.to/#/@axxsh:matrix.org">[Matrix] : @axxsh:matrix.org</a></li>
-	<li><a href="https://github.com/axxsh">[Github] : github.com/axxsh</a>
-</ul>
-<h3>Other</h3>
-<ul>
-	<li><a href="/blog">[Blog]</a></li>
-	<li><a href="/gallery.html">[Photos]</a></li>
-</ul>
 </div>
 
     </div>
@@ -54,11 +53,11 @@
 </body>
 
 <footer>
-<p>____</p>
-<div class"gnulinux">
-<img src="/images/gnulinuxindia.png" alt="gnulinuxindia">
+<hr>
+<div class"gnulinux"><a href="https://gnulinuxindia.org"">
+<img src="/images/gnulinuxindia.png" alt="gnulinuxindia"></a>
 </div>
-<p class="bottom">Akshay K P <a href="https://akshaykp.xyz">[axxsh]</a> | Made using <a href="https://www.getzola.org/">Zola</a></p>
+<p class="bottom">Akshay K P<a href="https://akshaykp.xyz">[axxsh]</a></p>
 </footer>
 
 </html>
