corrected about me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>I am a web designer and a self-taught 
             <br>front-end developer based in Kerala,India.
             <br>I was a mechanical engineering student 
-            <br>who dropped college to do what I love.
+            <br>and dropped college to do what I love.
             <br>I started with graphics and web design,
             <br>which inspired me to learn front-end 
             <br>web development.</p>
