--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>akshay.</title>
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <meta name="description" content="Akshay's Personal Website">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="description" content="Akshay's Website">
     <meta name="author" content="axxsh">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,7 +55,7 @@
             <p>I am a web designer and a self-taught 
             <br>front-end developer based in Kerala,India.
             <br>I was a mechanical engineering student 
-            <br>and dropped college to do what I love.
+            <br>who dropped college to do what I love.
             <br>I started with graphics and web design,
             <br>which inspired me to learn front-end 
             <br>web development.</p>
@@ -80,14 +83,14 @@
             <div class="anime item">
                 <img src="/images/vrweb.png">
                 <div class="text">
-                <h3>VR website</h3>
+                <h3>VR website design</h3>
                 <h3><a href="/projects/vr-website">View</a></h3>
                 </div>
             </div>
             <div class="gallery item">
                 <img src="/images/ui.png">
                 <div class="text">
-                <h3>VR app</h3>
+                <h3>VR app design</h3>
                 <h3><a href="/projects/vr-ui-design/">View</a></h3>
                 </div>
             </div>
@@ -133,7 +136,7 @@
             <h2>Contact me</h2>
             <p><a href="mailto:axxsh.kp@gmail.com">Email : axxsh.kp@gmail.com</a></p>
             <p><a href="https://github.com/axxsh">Github: github.com/axxsh</a></p>
-            <p><a href="https://matrix.to/#/@axxsh:matrix.org">Matrix: @axxsh:matrix.org</a></p>
+            <!--<p><a href="https://matrix.to/#/@axxsh:matrix.org">Matrix: @axxsh:matrix.org</a></p>-->
         </div>
     </footer>
 </body>
