--- a/index.html
+++ b/index.html
@@ -60,21 +60,22 @@
             <br>which inspired me to learn front-end 
             <br>web development.</p>
         </div>
-        <!--
+        
         <div class="skills">
             <h2>Skills & Tools</h2>
             <h3>Web Design</h3>
-            <p>Figma</p>
-            <p>Abobe XD</p>
-            <p>Adobe Illustrator</p>
-            <p>Adobe Photoshop</p>
+            <p>Figma<br>
+            Abobe XD<br>
+            Adobe Illustrator<br>
+            Adobe Photoshop</p>
             <h3>Frontend</h3>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>Sass</p>
-            <p>React.js</p>
+            <p>HTML<br>
+            CSS<br>
+            Sass<br>
+            React.js<br>
+            Git</p>
         </div>
-    -->
+    
     </section>
     <section class="portfolio" id="portfolio">
         <h2>Portfolio</h2>
