--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <br />web development.
         </p>
         <p>
-          Currently, I am working as Web Developer <br />
+          Currently, I am working as Frontend Web Developer <br />
           at
           <a
             href="https://mojgenie.com/"
